zz-deploy/base/30-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-websites
spec:
  replicas: 1
  template:
    spec:
      volumes: []
      serviceAccountName: blog-websites
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: In
                    values:
                      - ""
                      - "true"
                      - "yes"
      containers:
        - name: image
          image: "ghcr.io/liaosirui/blog-liaosirui-com:0.0.0"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 60
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          env: []
          volumeMounts: []
